--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@ant-design/colors": "^7.1.0",
+    "@emotion/css": "^11.13.4",
     "antd": "^5.21.2",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
